doctor oauth and CRUD
